--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>esdraslov's home</title>
+  <title>@esdraslov</title>
 </head>
 <body>
-  wellcome to my web not official site
+  <div class="header">
+    <span class="name">@esdraslov</span>
+  </div>
 </body>
 </html>
